test/parsing/errors/newWithoutArgs.compopts
--detailed-errors # newWithoutArgs-detailed.good
--no-detailed-errors # newWithoutArgs-brief.good
